// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`notifications 스냅샷 > NotificationLogWithRelations 키 구조 1`] = `
{
  "apiResponse": "object",
  "channel": "string",
  "consignmentId": "string",
  "consignment_requests": "object",
  "createdAt": "string",
  "id": "string",
  "message": "string",
  "phone": "string",
  "sellerId": "string",
  "sellers": "object",
  "status": "string",
  "triggerEvent": "string",
}
`;

exports[`products 스냅샷 > ProductSummary 구조 1`] = `
{
  "inactive": "number",
  "photoDone": "number",
  "photoPending": "number",
  "selling": "number",
  "sold": "number",
}
`;

exports[`products 스냅샷 > StProductWithSeller 키 구조 1`] = `
{
  "brand": "string",
  "buyerName": "null",
  "category": "string",
  "color": "null",
  "composition": "string",
  "consignmentDate": "string",
  "createdAt": "string",
  "id": "string",
  "isActive": "boolean",
  "legacyCode": "null",
  "material": "null",
  "measurements": "object",
  "naverProductId": "null",
  "origin": "string",
  "photoStatus": "string",
  "photos": "array(0)",
  "productCondition": "null",
  "productName": "string",
  "productNumber": "string",
  "productType": "string",
  "referenceImage": "string",
  "retailPrice": "number",
  "retailPriceConfidence": "number",
  "retailPriceSource": "string",
  "salePrice": "number",
  "salesRecordId": "null",
  "sellerId": "string",
  "sellerPayment": "null",
  "sellers": "object",
  "size": "null",
  "smartStoreRegistered": "boolean",
  "smartstoreData": "null",
  "smartstoreStatus": "string",
  "soldAmount": "null",
  "soldAt": "null",
  "unsellableReason": "null",
  "updatedAt": "string",
}
`;

exports[`sellers 스냅샷 > Seller 키 구조 1`] = `
{
  "address": "null",
  "bankAccount": "null",
  "bankHolder": "null",
  "bankName": "null",
  "bankVerified": "boolean",
  "channelType": "string",
  "commissionRate": "number",
  "contractEnd": "null",
  "contractStart": "null",
  "createdAt": "string",
  "email": "null",
  "id": "string",
  "idCardFileUrl": "null",
  "idCardNumber": "null",
  "idCardVerified": "boolean",
  "marketingConsent": "boolean",
  "marketingConsentAt": "null",
  "name": "string",
  "nickname": "null",
  "phone": "string",
  "sellerCode": "string",
  "sellerTier": "string",
  "status": "string",
  "taggingCode": "null",
  "updatedAt": "string",
}
`;

exports[`sellers 스냅샷 > listByPage 결과 구조 1`] = `
{
  "dataLength": 2,
  "firstRowShape": {
    "address": "null",
    "bankAccount": "null",
    "bankHolder": "null",
    "bankName": "null",
    "bankVerified": "boolean",
    "channelType": "string",
    "commissionRate": "number",
    "contractEnd": "null",
    "contractStart": "null",
    "createdAt": "string",
    "email": "null",
    "id": "string",
    "idCardFileUrl": "null",
    "idCardNumber": "null",
    "idCardVerified": "boolean",
    "marketingConsent": "boolean",
    "marketingConsentAt": "null",
    "name": "string",
    "nickname": "null",
    "phone": "string",
    "sellerCode": "string",
    "sellerTier": "string",
    "status": "string",
    "taggingCode": "null",
    "updatedAt": "string",
  },
  "total": "number",
}
`;
